--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -6,6 +6,7 @@
       <th scope="col">#</th>
       <th scope="col">Criador</th>
       <th scope="col">Texto</th>
+      <th scope="col">Likes</th>
       <th scope="col">Criado em </th>
       
       
@@ -17,6 +18,7 @@
       <th scope="row"><%= post.id %></th>
       <td><%= post.user.name%></td>
       <td><%= link_to post.body.truncate(30), admin_post_path(post) %></td>
+      <td><%= post.likes.count%></td>
       <td><%= post.created_at.strftime("%d/%m/%y %H:%M") %></td>
     </tr>
     <% end %>
