--- a/app/views/user/_post_card.html.erb
+++ b/app/views/user/_post_card.html.erb
@@ -1,23 +1,44 @@
-  <div class="card text-white bg-dark mb-3 mt-3">
-            <div class="card-header">
-              <%= link_to post.user.name, post.user == current_user ? user_profile_path : user_user_path(post.user) %>
-
-              <% if post.user == current_user %>
-                <%= link_to user_post_path(post), method: :delete, class: "close text-white" do %>
-                  <span aria-hidden="true">&times;</span>
-                <% end %>
-              <% end %>
-            </div>
-            
-            <div class="card-body">
-              <small class="text-muted"><%= post.created_at.strftime("%d/%m/%Y %H:%M") %></small>
-              <p class="card-text"> <%=post.body %></p>
-
-              <%= link_to nil, {class: "like-toggle", id: post.id, remote: true} do %>
-                <i style="font-size:18px; color: <%= post.liked_by_user?(current_user) ? "#00c0ff" : "#ffffff" %>" class="fa fa-thumbs-up">
-                </i>
-              <% end %>
-
-              <span class="ml-2"> <%= post.likes.count %> </span>
-            </div>
+  <div class="card text-white bg-dark mb-3 mt-3" style="font-size:17px;">
+    <div class="card-header">
+      <%= link_to post.user.name, post.user == current_user ? user_profile_path : user_user_path(post.user) %>
+      
+      <% if post.user == current_user %>
+      <%= link_to user_post_path(post), method: :delete, class: "close text-white" do %>
+      <span aria-hidden="true">&times;</span>
+      <% end %>
+      <% end %>
     </div>
+    
+    <div class="card-body">
+      <small class="text-muted"><%= post.created_at.strftime("%d/%m/%Y %H:%M") %></small>
+      <p class="card-text"> <%=post.body %></p>
+      
+      <%= link_to nil, {class: "like-toggle", id: post.id, remote: true} do %>
+      <i style="font-size:18px; color: <%= post.liked_by_user?(current_user) ? "#00c0ff" : "#ffffff" %>" class="fa fa-thumbs-up">
+      </i>
+      <% end %>
+      
+      <span class="ml-2"> <%= post.likes.count %> </span>
+    </div>
+  </div>
+  
+  
+  <%= form_with(model: [:user, @comment], local: false, data: {remote: true}) do |f| %>
+    <%= f.hidden_field(:post_id, value: post.id) %>
+    <div class="form-group">
+      <%= f.text_area :body, rows: 2, class: "form-control", placeholder: "Escreva seu comentário...", required: true %>
+    </div>
+    <div class="d-flex">
+      <%= f.submit "Enviar", class: "btn btn-sm btn-primary ml-auto"%>
+      
+    </div>
+  <% end %>
+
+  <div id="post<%= post.id %>-comments">
+    <% post.comments.order(created_at: :desc).each do |comment| %>
+      <%= render("comment_card", comment: comment) %>
+    <% end %>
+  </div>
+
+
+<hr class="bg-secondary">
