--- a/app/views/layouts/user/_header.html.erb
+++ b/app/views/layouts/user/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm bg-primary navbar-dark" style="background-color:#58D7FF!important;">
+<nav class="navbar navbar-expand-sm bg-primary navbar-dark" style="background-color:#2DAAE1!important;">
   <div class="container" >
     <%= image_tag("logo.png", alt: "logo", class: 'navbar-brand', style: "height:40px;")%>
     <ul class="navbar-nav">
